[package]
name = "pcap_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
pcap = "1.0.0"
pnet_packet = "0.31.0"
pnet_datalink = "0.31.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }